# QueryMind-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md
scripts/: check.ps1
src/querymind/: main.py
src/querymind/adapters/: __init__.py  contracts.py  interfaces.py  live_adapter.py  mock_adapter.py
src/querymind/core/: logging.py  middleware.py  settings.py
src/querymind/domain/: contracts.py
src/querymind/services/: classifier.py  fact_check.py  pipeline.py
tests/integration/: test_api_query.py
tests/unit/: test_classifier.py  test_live_adapter_http.py  test_live_guardrails.py  test_live_retry.py  test_pipeline.py
