[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "querymind-v2"
version = "0.1.0"
description = "QueryMind v2 deterministic analytics pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi",
	"uvicorn",
	"httpx",
	"pydantic",
	"pydantic-settings",
	"python-dotenv",
]

[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-asyncio",
	"ruff",
	"mypy",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 140
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
files = ["src", "tests"]
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
	"fastapi.*",
	"starlette.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
	"tests.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
